# metlibs-qutilities

./: .gitignore  CMakeLists.txt  ClientButton.cc  ClientButton.h  CoClient.cc  CoClient.h  LGPLHEAD  Makefile  Makefile.am  QLetterCommands.cc  QLetterCommands.h  README  bootstrap.sh  circle_yellow.xpm  configure.ac  metlibs-qutilities.pc.in  miLogFile.cc  miLogFile.h  miMessage.cc  miMessage.h  miSliderWidget.cc  miSliderWidget.h  miTimeSpinBox.cc  miTimeSpinBox.h  qUtilities.pc.in  qbLoginDialog.cc  qbLoginDialog.h  qbLoginInfo.cc  qbLoginInfo.h  qtHelpDialog.cc  qtHelpDialog.h  qtHelpers.cc  qtHelpers.h  qutilities.pc.in
cmake/: MetnoQtUtils.cmake  MetnoUtils.cmake
debian/: changelog  control  copyright  libmetlibs-qutilities-qt5-8.install  metlibs-qutilities-dev.install  metlibs-qutilities-qt5-dev.install  metlibs-translations.install  rules
doc/: QLetterCommands.html
include/: ClientButton.h  CoClient.h  Makefile.am  QLetterCommands.h  QMessage.h  QMessageClient.h  QMessageClientList.h  circle_green.xpm  circle_red.xpm  conn.xpm  disconn.xpm  miLogFile.h  miMessage.h  miSliderWidget.h  miTimeSpinBox.h  qbLoginDialog.h  qbLoginInfo.h  qtClientButton.h  qtClientDialog.h  qtHelpDialog.h  unconn.xpm
lang/: Makefile.am  qUtilities_de.ts  qUtilities_nb.ts  qUtilities_no.ts  qUtilities_sv.ts
m4/: have_qt4_check.m4  metno_boost.m4  metno_check.m4  metno_have_log4cxx.m4  metno_pkg.m4  metno_qt4.m4  metno_set_version_info.m4
src/: CMakeLists.txt  ClientButton.cc  ClientButton.h  CoClient.cc  Makefile  Makefile.am  QMessage.cc  QMessageClient.cc  QMessageClientList.cc  miLogFile.cc  miLogFile.h  miLoggingQt.cc  miLoggingQt.h  miMessage.cc  miSliderWidget.cc  miTimeSpinBox.cc  qUtilitiesVersion.h  qbLoginDialog.cc  qbLoginInfo.cc  qtClientButton.cc  qtClientDialog.cc  qtHelpDialog.cc  qtHelpDialog.h  tb_search.xpm
