pkg_includedir = ${prefix}/include/${PACKAGE_NAME}

pkg_include_HEADERS = \
	QLetterCommands.h \
	QMessage.h \
	QMessageClient.h \
	QMessageClientList.h \
	miLogFile.h \
	miMessage.h \
	miSliderWidget.h \
	miTimeSpinBox.h \
	qbLoginDialog.h \
	qbLoginInfo.h \
	qtClientButton.h \
	qtClientDialog.h \
	circle_green.xpm \
	circle_red.xpm \
	circle_yellow.xpm \
	conn.xpm \
	disconn.xpm

%.xpm:
	echo -n ""

INSTALL=install -p # tells install to preserve timestamp
