pkg_includedir = ${prefix}/include/${PACKAGE_NAME}

pkg_include_HEADERS = \
    ClientButton.h \
    CoClient.h \
	QLetterCommands.h \
	miLogFile.h \
	miMessage.h \
	miSliderWidget.h \
	miTimeSpinBox.h \
	qbLoginDialog.h \
	qbLoginInfo.h \
	circle_green.xpm \
	circle_red.xpm \
	circle_yellow.xpm \
	conn.xpm \
	disconn.xpm

%.xpm:
	echo -n ""

INSTALL=install -p # tells install to preserve timestamp
